--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="pt-br" >
+<html lang="pt-br">
   <head>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -9,6 +9,7 @@
     />
 
     <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="style.css" />
 
@@ -19,17 +20,16 @@
     <div id="container">
       <div id="profile">
         <img
-          src="/assets/Avatar Carla.png"
+          src="/assets/avatar-dark.png"
           alt="Foto que precisa ser modificada"
         />
         <p>Carla Amaral</p>
+        <p id="subtitulo">Psicóloga | CRP 13/7667</p>
       </div>
 
       <div id="switch" onclick="toggleMode()">
-        <button>
-        </button>
-        <span>
-        </span>
+        <button></button>
+        <span> </span>
       </div>
       <ul>
         <li>
@@ -81,7 +81,7 @@ define o tipo de documento -->
     root element -->
 
 <!--<head>
-    amorajusta configuraçòes do documento. não é visível ao usuário -->
+    ajusta configuraçòes do documento. não é visível ao usuário -->
 
 <!--<meta charset="UTF-8" />
     Conjunto de caracteres que será aceito na página. UTF-8 permite alguns caracteres especiais-->
